# grahpql_agent

./: LICENSE
ingestion/: Dockerfile  Makefile  README.md  exploration_tool_plan.md  handlers_mapping.yaml  pyproject.toml
ingestion/exploration_outputs/org_athletes_31_171552/: flat_data.json  raw_data.json
ingestion/exploration_outputs/org_athletes_31_171959/: flat_data.json
ingestion/exploration_outputs/org_athletes_31_172051/: raw_data.json
ingestion/exploration_outputs/org_athletes_31_172219/: data_report.md
ingestion/exploration_outputs/org_athletes_31_172525/: data_report.md  flat_data.json  raw_data.json
ingestion/notebbooks/: dummy.ipynb  test_graphql_handler.ipynb  test_handler.ipynb  test_liveheats_working.ipynb
ingestion/src/: main.py  runner.py
ingestion/src/base/: base_handler.py
ingestion/src/exploration/: __init__.py  constants.py  graphql_explorer.py
ingestion/src/exploration/nsw_surfing/: __init__.py  nsw_surfing_explorer.py
ingestion/src/exploration/nsw_surfing/queries/: account.graphql  athletes_by_federation.graphql  club_membership.graphql  org_athletes.graphql
ingestion/src/handlers/dlt/: __init__.py  dlt_handler.py  graphql_dlt_handler.py
ingestion/src/handlers/graphql/: graphql_handler.py
ingestion/src/utils/: data_utils.py  export_utils.py  graphql_client.py  logging_utils.py  metrics.py  query_loader.py  secrets.py  sinks.py
ingestion/src/utils/data_analysis/: __init__.py  constants.py  data_flattener.py  data_processor.py  data_profiler.py  errors.py  flattener.py  statistical_eda.py  structure_analyzer.py  type_inference.py
ingestion/tests/: run_local_test.py
ingestion/tests/config/: test_config.json
ingestion/tests/data/: test_club_membership.json
ingestion/tests/integration/: conftest.py
ingestion/tests/integration/handlers/: docker-compose.test.yml  test_graphql_handler_integration_docker.py  test_graphql_hanlder_integration.py
ingestion/tests/integration/liveheats/: test_liveheats_orgs_integration.py
ingestion/tests/queries/: liveheats_orgs.graphql
ingestion/tests/unit/data_analysis/: test_data_processor.py
ingestion/tests/unit/handlers/dlt/: __init__.py  test_dlt_handler.py  test_graphql_dlt_handler.py
ingestion/tests/unit/handlers/graphql/: test_graphql_handler.py
ingestion/tests/unit/utils/clients/: test_graphql_client.py
ingestion/wheels/: dvp_observability-0.3.0-py3-none-any.whl
